[package]
name = "soltransfer"
version = "0.1.0"
authors = ["Ibrokhim Kholmatov <ibrohimkhan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
thiserror = "1.0.25"
solana-program = "1.10.8"

[dev-dependencies]
solana-program-test = "1.10.8"
solana-sdk = "1.10.8"

[lib]
crate-type = ["cdylib", "lib"]